[package]
name = "jmfm"
version = "1.0.0"
authors = ["Denys Patsera <nozistance@gmail.com>"]
edition = "2021"
description = "JMFM (Java minecraft:filled_map's) is a library and console utility designed to convert images into Minecraft map art"
repository = "https://github.com/Nozistance/jmfm"
license = "BSD-3-Clause"

[dependencies]
hematite-nbt = "0.5.2"
image = "0.24.6"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }

[dependencies.clap]
optional = true
version = "4.3.8"
features = ["derive"]

[dependencies.confy]
optional = true
version = "0.5.1"

[dependencies.env_logger]
optional = true
version = "0.10.0"

[dependencies.log]
optional = true
version = "0.4.19"

[dependencies.indicatif]
optional = true
version = "0.17.5"

[dependencies.toml]
optional = true
version = "0.8.2"

[features]
binary = ["clap", "confy", "env_logger", "log", "indicatif", "toml"]
default = ["binary"]

[lib]
name = "jmfm"
path = "src/lib.rs"