[package]
name = "jmfm"
version = "2.0.0"
authors = ["Denys Patsera <nozistance@gmail.com>"]
edition = "2021"
description = "JMFM (Java minecraft:filled_map's) is a library and console utility designed to convert images into Minecraft map art"
repository = "https://github.com/Nozistance/jmfm"
license = "BSD-3-Clause"

[dependencies]
hematite-nbt = "0.5.2"
image = "0.24.1"
rayon = "1.8.0"
serde = { version = "1.0.164", features = ["derive"] }
clap = { version = "4.3.8", features = ["derive"], optional = true }
confy = { version = "0.5.1", optional = true }
env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.19", optional = true }
indicatif = { version = "0.17.5", optional = true }
toml = { version = "0.8.2", optional = true }

[features]
binary = ["clap", "confy", "env_logger", "log", "indicatif", "toml"]
default = ["binary"]

[lib]
name = "jmfm"
path = "src/lib.rs"

[[bin]]
name = "jmfm"
path = "src/main.rs"
required-features = ["binary"]